Assertion failure in WebInspectorProxy::platformClose closing main window when inspecting a popup window, or when running regression tests. https://bugs.webkit.org/show_bug.cgi?id=53798 <rdar://problem/8814364>

Reviewed by Adam Roben.

Only assert about the state of m_inspectorWindow and m_inspectorView if the inspector is visible.
Also, only call ::DestroyWindow if the HWND is non-null, just to be safe.

* UIProcess/win/WebInspectorProxyWin.cpp:
(WebKit::WebInspectorProxy::platformClose):



Canonical link: https://commits.webkit.org/67726@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77655 268f45cc-cd09-0410-ab3c-d52691b4dbfc